--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,6 +36,7 @@
         <div class="nav">
             <a href="/pagina1">Análisis Página 1</a>
             <a href="/pagina2">Análisis Página 2</a>
+            <a href="/pagina3">Página 3 Filtros</a>
         </div>
     </body>
 </html>
